# cours-python

./: build.py  deploy.py  pre-push-hook  pyproject.toml
source/: conf.py
source/04-contrôle-de-flux/: 02-falsy-truthy.rst
source/10-classes-01/: index.rst
source/13-bibliothèques-01/: 05-virtualenv.rst
source/14-fichiers-et-données-binaires/: 02-fichiers.rst
