[tool.poetry]
name = "cours-python"
version = "0.1.0"
description = "Programmation en Python"
authors = ["Dimitri Merejkowsky <dimitri.merejkowsky@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.0"
sphinx-notfound-page = "^1.0"
sphinx-book-theme = "1.0.1"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
